--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <main>
         <div class="main">
           <div class="tour_grid">
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/1.jpg" alt="" />
+                  <img src="img/1.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -72,10 +72,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/2.jpg" alt="" />
+                  <img src="img/2.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -92,10 +92,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/3.jpg" alt="" />
+                  <img src="img/3.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">ENTRY TICKET</p>
                   </div>
@@ -112,10 +112,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/4.jpg" alt="" />
+                  <img src="img/4.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -132,10 +132,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/5.jpg" alt="" />
+                  <img src="img/5.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -152,10 +152,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/6.jpg" alt="" />
+                  <img src="img/6.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -172,10 +172,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/7.jpg" alt="" />
+                  <img src="img/7.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -192,10 +192,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/8.jpg" alt="" />
+                  <img src="img/8.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -212,10 +212,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/9.jpg" alt="" />
+                  <img src="img/9.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -232,10 +232,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/10.jpg" alt="" />
+                  <img src="img/10.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -252,10 +252,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/11.jpg" alt="" />
+                  <img src="img/11.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -272,10 +272,10 @@
               </div></a
             >
 
-            <a href="/single.html"
+            <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/img/12.jpg" alt="" />
+                  <img src="img/12.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
