--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/1.jpg" alt="" />
+                  <img src="1.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
