--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/2.jpg" alt="" />
+                  <img src="2.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -95,7 +95,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/3.jpg" alt="" />
+                  <img src="3.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">ENTRY TICKET</p>
                   </div>
@@ -115,7 +115,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/4.jpg" alt="" />
+                  <img src="4.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -135,7 +135,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/5.jpg" alt="" />
+                  <img src="5.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -155,7 +155,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/6.jpg" alt="" />
+                  <img src="6.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -175,7 +175,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/7.jpg" alt="" />
+                  <img src="7.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -195,7 +195,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/8.jpg" alt="" />
+                  <img src="8.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -215,7 +215,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/9.jpg" alt="" />
+                  <img src="9.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -235,7 +235,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/10.jpg" alt="" />
+                  <img src="10.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">PRIVATE TOUR</p>
                   </div>
@@ -255,7 +255,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/11.jpg" alt="" />
+                  <img src="11.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
@@ -275,7 +275,7 @@
             <a href="single.html"
               ><div class="card">
                 <div class="card_header">
-                  <img src="/12.jpg" alt="" />
+                  <img src="12.jpg" alt="" />
                   <div class="tour_tag">
                     <p class="overlay">GUIDED TOUR</p>
                   </div>
