--- a/single.html
+++ b/single.html
@@ -53,7 +53,7 @@
       <main>
         <div class="main">
           <div class="featured_image">
-            <img src="/single-tour.jpg" alt="" />
+            <img src="single-tour.jpg" alt="" />
           </div>
         </div>
 
@@ -173,7 +173,7 @@
           </div>
 
           <div class="google_map">
-            <img src="img/map.JPG" alt="" />
+            <img src="map.JPG" alt="" />
           </div>
 
           <div class="important_information">
@@ -519,7 +519,7 @@
           <div class="tour_grid_bottom">
             <div class="card">
               <div class="card_header">
-                <img src="/6.jpg" alt="" />
+                <img src="6.jpg" alt="" />
                 <div class="tour_tag">
                   <p class="overlay">GUIDED TOUR</p>
                 </div>
@@ -536,7 +536,7 @@
             </div>
             <div class="card">
               <div class="card_header">
-                <img src="/8.jpg" alt="" />
+                <img src="8.jpg" alt="" />
                 <div class="tour_tag">
                   <p class="overlay">GUIDED TOUR</p>
                 </div>
@@ -553,7 +553,7 @@
             </div>
             <div class="card">
               <div class="card_header">
-                <img src="/3.jpg" alt="" />
+                <img src="3.jpg" alt="" />
                 <div class="tour_tag">
                   <p class="overlay">GUIDED TOUR</p>
                 </div>
@@ -570,7 +570,7 @@
             </div>
             <div class="card">
               <div class="card_header">
-                <img src="/2.jpg" alt="" />
+                <img src="2.jpg" alt="" />
                 <div class="tour_tag">
                   <p class="overlay">GUIDED TOUR</p>
                 </div>
