--- a/single.html
+++ b/single.html
@@ -39,7 +39,7 @@
               <p>Search Tours</p>
               <input type="search" name="search" id="search" />
               <i class="fa fa-search"></i>
-              <a href="/index.html"><i class="fas fa-home"></i></a>
+              <a href="Re_Seller_Account_FS/index.html"><i class="fas fa-home"></i></a>
             </div>
             <div class="cart">
               <p>0 :Items</p>
